# school_saas

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_add_tenant_slug.sql  0003_add_tenant_slug.sql  0004_add_tenants_slug.sql  0006_classes_and_students_class_id.sql  0007_add_tenant_billing_due_date.sql  0008_set_default_tenant_billing_due_date.sql  0009_add_students_and_users_profile_fields.sql  0010_classes_period_attendance_gradebook.sql  0011_create_subjects_and_teacher_link.sql  0012_create_terms_and_fk_gradebook.sql  0013_add_terms_is_active.sql  0014_drop_legacy_gradebook_unique.sql  0015_add_tenants_passing_min_grade.sql  0016_create_guardians_and_links.sql  0017_create_people_unified_registry.sql  0018_add_financial_guardian_person_type.sql  0019_attendance_per_subject.sql  0020_create_person_roles.sql  0021_add_students_extended_profile.sql  0022_add_people_address_fields.sql  0023_add_pickup_authorized_person_type.sql  0024_add_students_inclusion_fields.sql  0025_create_parent_students_links.sql  0026_create_pickup_authorized_students_links.sql  0027_add_people_photo_url.sql  0028_create_financial_contracts_and_installments.sql  0029_create_financial_email_logs.sql  0030_create_financial_guardian_students_links.sql  0031_add_financial_billing_modes_and_pix.sql  0032_add_financial_contract_template_to_tenants.sql  0033_create_financial_ledger.sql  0034_financial_master_data_and_fk.sql  0035_financial_people_links.sql
backend/scripts/: test_classes_flow.sh
backend/src/: config.rs  db.rs  (+1 more)
(+45 files in other folders)
