[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth / crypto
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
